# simple_mdm

./: .gitignore
enrollment/: Cargo.toml
enrollment/src/: main.rs
resources/: FleetDM.md  MDEv2.md  mdev2.wsdl  xcep.wsdl
server/: Cargo.toml
server/self_signed_certs/: generate.ps1
server/src/: lib.rs
server/src/microsoft_protocol/: mde_v2.rs  mod.rs  soap.rs  xcep.rs
server/src/xsd_primitives/: datetime.rs  decimal.rs  mod.rs
